10-section-10/portal/grade-submission-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  # The clusterIP is an automatically load balancer when you have multiple pod replicas.
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: grade-submission-portal
  ports:
  - port: 5001
    targetPort: 5001
