10-section-10/portal/grade-submission-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-portal-ingress
  namespace: grade-submission
  # labels:
  #   name: myingress
spec:
  ingressClassName: nginx # kubectl get ingressClass
  rules:
  # We are  removing specifying host, since we are using a single node cluster on local machine
  # - host: 127
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grade-submission-portal
            port: 
              number: 5001
